[tool.poetry]
name = "titanic"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.2.1"
numpy = "^1.24.2"
pandas = "^1.5.3"
more-itertools = "^9.1.0"
tqdm = "^4.65.0"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.6.1"
jupytext = "^1.14.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
